WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25373
Popup menu has the wrong size when popped up near the edge of the screen
https://bugs.webkit.org/show_bug.cgi?id=25373
Summary
Popup menu has the wrong size when popped up near the edge of the screen
Johan Bilien
Reported
2009-04-24 13:06:16 PDT
When popping up the context menu with the pointer is near the edge of the screen, the menu has the wrong size (it's not offset to not be offscreen). See the attached illustration.
Attachments
illustration
(666 bytes, image/png)
2009-04-24 13:06 PDT
,
Johan Bilien
no flags
Details
proposed patch
(1.79 KB, patch)
2009-04-24 13:14 PDT
,
Johan Bilien
xan.lopez
: review-
Details
Formatted Diff
Diff
the same with a ChangeLog entry
(2.78 KB, patch)
2009-04-24 13:44 PDT
,
Johan Bilien
xan.lopez
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Johan Bilien
Comment 1
2009-04-24 13:06:46 PDT
Created
attachment 29757
[details]
illustration
Johan Bilien
Comment 2
2009-04-24 13:14:14 PDT
Created
attachment 29758
[details]
proposed patch
Xan Lopez
Comment 3
2009-04-24 13:31:13 PDT
Comment on
attachment 29758
[details]
proposed patch Looks good. I need you to generate a ChangeLog with WebKitTools/Scripts/prepare-ChangeLog though, and when you upload a patch put the review flag to '?' so it appears in the review queue. Marking as r- for now, thanks for the patch!
Johan Bilien
Comment 4
2009-04-24 13:44:58 PDT
Created
attachment 29760
[details]
the same with a ChangeLog entry
Xan Lopez
Comment 5
2009-04-24 13:47:45 PDT
Comment on
attachment 29760
[details]
the same with a ChangeLog entry Great. I'll commit it ASAP.
Xan Lopez
Comment 6
2009-04-24 14:18:19 PDT
Landed as
r42837
, thanks.
Enrico Tröger
Comment 7
2009-04-25 11:13:14 PDT
***
Bug 24270
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug